--- a/Project/Project1. rock_scissor_paper.ipynb
+++ b/Project/Project1. rock_scissor_paper.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project1. Rock_Scissior_Paper 분류 모델 만들기\n",
+    "\n",
+    "### 1. 가위, 바위, 보 사진을 찍어서 각각의 폴더에 저장한다.\n",
+    "\n",
+    "### 2. 찍은 사진의 사이즈를 변경한다.\n",
+    "여기서는 224x224 -> 28x28\n",
+    "\n",
+    "### 3. 사진들에 해당하는 라벨을 붙여서 데이터셋을 만든다.\n",
+    "\n",
+    "### 4. 똑같은 방법으로 테스트셋을 만든다.\n",
+    "이때 사진의 환경이나 모양이 다양할수록 좋다.\n",
+    "\n",
+    "### 5. 가위바위보 분류 모델을 설계한다.\n",
+    "Overfitting을 줄이고 정확도를 높인다.\n",
+    "\n",
+    "### 6. 테스트 데이터로 모델을 평가한다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 설계 과정\n",
+    "- train 데이터의 개수가 적었을 때는 정확도가 낮은 경향이 있었다. 그래서 팀원들의 데이터를 수집해서 총 9000장의 data를 수집했다.\n",
+    "- 사진을 수집하는 과정에서 .jpg파일과 .png파일이 혼용되는 경우가 있었다. 그래서 모든 파일을 쓰기 위해 *.* 으로 바꿨다.\n",
+    "- 가위바위보 사진은 MNIST 데이터보다 추출할 특징이 많다고 생각했다. 그래서 컨볼루션 레이어를 하나 더 추가했다.\n",
+    "- epoch의 수를 높이면 정확도가 오히려 정확도가 떨어졌다. 그래서 Dropout과 earlystop을 사용해서 과적합을 줄였다.\n",
+    "- 또한 과적합을 줄이기 위해서 keras.regularizers.l2(0.001)를 사용해 가중치를 규제했다.\n",
+    "#### 결과적으로 데이터가 많을 수록, 과적합을 줄일 수록 더 좋은 모델이 된다. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
