--- a/Project/Exploration/Project 3-1. 뉴스기사 크롤링 및 분류.ipynb
+++ b/Project/Exploration/Project 3-1. 뉴스기사 크롤링 및 분류.ipynb
@@ -36,7 +36,7 @@
     "csv_path = r'/home/aiffel0042/aiffel/news_crawler/news_fold/'\n",
     "output_path = r'/home/aiffel0042/aiffel/news_crawler/result_fold/result.csv'\n",
     "\n",
-    "allFile_list = glob.glob(os.path.join(csv_path, 'news_*'))\n",
+    "allFile_list = glob.glob(os.path.join(csv_path, '*.csv'))\n",
     "\n",
     "allData = []\n",
     "for file in allFile_list:\n",
@@ -656,6 +656,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
