Revise image project

--- a/Project/Exploration/Project_E 2-1. load_digits 손글씨 분류.ipynb
+++ b/Project/Exploration/Project_E 2-1. load_digits 손글씨 분류.ipynb
@@ -9,8 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:35:35.193468Z",
+     "start_time": "2020-08-06T11:35:35.191428Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_digits\n",
@@ -27,8 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:35:35.610103Z",
+     "start_time": "2020-08-06T11:35:35.571339Z"
+    }
+   },
    "outputs": [],
    "source": [
     "digit = load_digits()"
@@ -43,8 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:35:36.037656Z",
+     "start_time": "2020-08-06T11:35:36.032940Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -60,8 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:35:36.228441Z",
+     "start_time": "2020-08-06T11:35:36.226221Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -78,8 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:35:36.429890Z",
+     "start_time": "2020-08-06T11:35:36.427150Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -91,7 +116,7 @@
        "       10., 12.,  0.,  0.,  0.,  0.,  6., 13., 10.,  0.,  0.,  0.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,8 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:35:36.650618Z",
+     "start_time": "2020-08-06T11:35:36.647836Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -118,7 +148,7 @@
        "array([0, 1, 2, ..., 8, 9, 8])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,8 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:35:36.899804Z",
+     "start_time": "2020-08-06T11:35:36.897428Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -142,7 +176,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,8 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:36.398469Z",
+     "start_time": "2020-08-06T11:32:36.396184Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,8 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:36.872526Z",
+     "start_time": "2020-08-06T11:32:36.866445Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -287,7 +331,7 @@
        " 'pixel_7_7']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,8 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:38.274430Z",
+     "start_time": "2020-08-06T11:32:38.267268Z"
+    },
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(digit_data,\n",
@@ -324,8 +374,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:39.116105Z",
+     "start_time": "2020-08-06T11:32:39.056404Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -344,8 +399,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:39.966148Z",
+     "start_time": "2020-08-06T11:32:39.949132Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -389,8 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:41.286863Z",
+     "start_time": "2020-08-06T11:32:41.085806Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -434,8 +499,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:43.014171Z",
+     "start_time": "2020-08-06T11:32:42.932284Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -479,8 +549,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:45.374901Z",
+     "start_time": "2020-08-06T11:32:45.298871Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -489,19 +564,19 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        43\n",
-      "           1       0.90      0.86      0.88        42\n",
-      "           2       0.95      1.00      0.98        40\n",
-      "           3       0.88      0.88      0.88        34\n",
-      "           4       0.97      0.97      0.97        37\n",
-      "           5       0.90      0.96      0.93        28\n",
-      "           6       0.96      0.93      0.95        28\n",
-      "           7       0.97      0.97      0.97        33\n",
-      "           8       0.95      0.86      0.90        43\n",
-      "           9       0.89      0.97      0.93        32\n",
+      "           1       0.88      0.88      0.88        42\n",
+      "           2       0.97      0.97      0.97        40\n",
+      "           3       0.79      0.97      0.87        34\n",
+      "           4       0.95      1.00      0.97        37\n",
+      "           5       0.90      1.00      0.95        28\n",
+      "           6       1.00      0.96      0.98        28\n",
+      "           7       0.89      0.97      0.93        33\n",
+      "           8       0.91      0.74      0.82        43\n",
+      "           9       0.96      0.75      0.84        32\n",
       "\n",
-      "    accuracy                           0.94       360\n",
-      "   macro avg       0.94      0.94      0.94       360\n",
-      "weighted avg       0.94      0.94      0.94       360\n",
+      "    accuracy                           0.92       360\n",
+      "   macro avg       0.93      0.93      0.92       360\n",
+      "weighted avg       0.93      0.92      0.92       360\n",
       "\n"
      ]
     }
@@ -524,8 +599,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:46.358722Z",
+     "start_time": "2020-08-06T11:32:46.234070Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -583,8 +663,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:47.668128Z",
+     "start_time": "2020-08-06T11:32:47.656548Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -601,7 +686,7 @@
        "       [ 0,  0,  0,  1,  0,  2,  0,  0,  0, 29]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,8 +708,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-06T11:32:48.876529Z",
+     "start_time": "2020-08-06T11:32:48.869906Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -686,6 +776,13 @@
     "SGD에서 갑자기 정확도가 갑자기 떨어지는 이유는 잘 모르겠다.  \n",
     "하지만 대량의 데이터에서 SGD의 성능이 좋다고 하므로 테스트가 필요하다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -705,6 +802,55 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "position": {
+    "height": "424px",
+    "left": "1144px",
+    "right": "20px",
+    "top": "45px",
+    "width": "676px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": true
   }
  },
  "nbformat": 4,
