--- a/Project/Exploration/Exploration7. Movielens recommendate.ipynb
+++ b/Project/Exploration/Exploration7. Movielens recommendate.ipynb
@@ -1057,11 +1057,11 @@
    },
    "outputs": [],
    "source": [
-    "# 고유한 유저, 아티스트를 찾아내는 코드\n",
+    "# 고유한 유저, 타이틀을 찾아내는 코드\n",
     "user_unique = data['user_id'].unique()\n",
     "title_unique = data['title'].unique()\n",
     "\n",
-    "# 유저, 아티스트 indexing 하는 코드 idx는 index의 약자입니다.\n",
+    "# 유저, 타이틀 indexing 하는 코드 idx는 index의 약자입니다.\n",
     "user_to_idx = {v:k for k,v in enumerate(user_unique)}\n",
     "title_to_idx = {v:k for k,v in enumerate(title_unique)}"
    ]
@@ -1087,7 +1087,7 @@
    ],
    "source": [
     "# 인덱싱이 잘 되었는지 확인해 봅니다. \n",
-    "print(user_to_idx['kimin'])    # 358869명의 유저 중 마지막으로 추가된 유저이니 358868이 나와야 합니다. \n",
+    "print(user_to_idx['kimin'])    # 60340명의 유저 중 마지막으로 추가된 유저이니 6039이 나와야 합니다. \n",
     "print(title_to_idx['forrest gump (1994)'])"
    ]
   },
@@ -1231,7 +1231,6 @@
    ],
    "source": [
     "# indexing을 통해 데이터 컬럼 내 값을 바꾸는 코드\n",
-    "# dictionary 자료형의 get 함수는 https://wikidocs.net/16 을 참고하세요.\n",
     "\n",
     "# user_to_idx.get을 통해 user_id 컬럼의 모든 값을 인덱싱한 Series를 구해 봅시다. \n",
     "# 혹시 정상적으로 인덱싱되지 않은 row가 있다면 인덱스가 NaN이 될 테니 dropna()로 제거합니다. \n",
@@ -1242,7 +1241,7 @@
     "else:\n",
     "    print('user_id column indexing Fail!!')\n",
     "\n",
-    "# artist_to_idx을 통해 artist 컬럼도 동일한 방식으로 인덱싱해 줍니다. \n",
+    "# temp_title_data을 통해 title 컬럼도 동일한 방식으로 인덱싱해 줍니다. \n",
     "temp_title_data = data['title'].map(title_to_idx.get).dropna()\n",
     "if len(temp_title_data) == len(data):\n",
     "    print('title column indexing OK!!')\n",
