--- a/Project/Exploration/E10. Camera sticker app_ex.ipynb
+++ b/Project/Exploration/E10. Camera sticker app_ex.ipynb
@@ -59,8 +59,8 @@
    },
    "outputs": [],
    "source": [
-    "img_bgr = cv2.imread('../../data/img/E10/image.jpeg')\n",
-    "img_bgr = cv2.resize(img_bgr, (640, 360))\n",
+    "img_bgr = cv2.imread('./data/img/ruyjin.png')\n",
+    "img_bgr = cv2.resize(img_bgr, (640, 640))\n",
     "img_show = img_bgr.copy() # 출력용 이미지 복사"
    ]
   },
