--- a/Project/Exploration/E10. Camera sticker app_ex.ipynb
+++ b/Project/Exploration/E10. Camera sticker app_ex.ipynb
@@ -603,7 +603,11 @@
     }
    ],
    "source": [
-    "요"
+    "sticker_area = img_bgr[refined_y:x_shape, refined_x:refined_x+y_shape]\n",
+    "img_bgr[refined_y:x_shape, refined_x:refined_x+y_shape] = \\\n",
+    "    np.where(img_sticker==0,sticker_area,img_sticker).astype(np.uint8)\n",
+    "plt.imshow(cv2.cvtColor(2, cv2.COLOR_BGR2RGB))\n",
+    "plt.show()"
    ]
   }
  ],
