--- a/Project/Exploration/E10. 고양이 수염 스티커 만들기.ipynb
+++ b/Project/Exploration/E10. 고양이 수염 스티커 만들기.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T06:58:22.555942Z",
-     "start_time": "2020-09-03T06:58:22.553749Z"
+     "end_time": "2020-09-03T12:44:09.182750Z",
+     "start_time": "2020-09-03T12:44:08.904188Z"
     }
    },
    "outputs": [],
@@ -445,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T09:45:24.390243Z",
-     "start_time": "2020-09-03T09:45:24.269513Z"
+     "end_time": "2020-09-03T13:34:31.991670Z",
+     "start_time": "2020-09-03T13:34:31.877274Z"
     },
     "scrolled": true
    },
@@ -485,11 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T09:45:25.258300Z",
-     "start_time": "2020-09-03T09:45:24.694020Z"
+     "end_time": "2020-09-03T13:34:32.670416Z",
+     "start_time": "2020-09-03T13:34:32.169032Z"
     }
    },
    "outputs": [
@@ -534,11 +534,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T09:45:26.161686Z",
-     "start_time": "2020-09-03T09:45:25.338676Z"
+     "end_time": "2020-09-03T13:34:34.252251Z",
+     "start_time": "2020-09-03T13:34:33.441521Z"
     },
     "scrolled": true
    },
@@ -585,11 +585,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T09:45:26.309647Z",
-     "start_time": "2020-09-03T09:45:26.175677Z"
+     "end_time": "2020-09-03T13:34:20.935081Z",
+     "start_time": "2020-09-03T13:34:20.819825Z"
     },
     "scrolled": true
    },
@@ -649,11 +649,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T08:43:12.652114Z",
-     "start_time": "2020-09-03T08:43:12.649643Z"
+     "end_time": "2020-09-03T13:00:23.586064Z",
+     "start_time": "2020-09-03T13:00:23.580557Z"
     }
    },
    "outputs": [],
@@ -663,11 +663,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T09:20:31.716401Z",
-     "start_time": "2020-09-03T09:20:31.576581Z"
+     "end_time": "2020-09-03T13:37:41.134973Z",
+     "start_time": "2020-09-03T13:37:41.015187Z"
     }
    },
    "outputs": [
@@ -677,7 +677,7 @@
      "text": [
       "(302, 309)\n",
       "227 219\n",
-      "43.97238321355834\n"
+      "이미지가 기울어진 각도: -43.97\n"
      ]
     },
     {
@@ -701,27 +701,36 @@
     "    w = int(math.sqrt((x-landmark[36][0])**2 + (landmark[30][1]-landmark[36][1])**2)*2)\n",
     "    h = int(math.sqrt((landmark[48][1]-landmark[2][1])**2 + (landmark[48][0]-landmark[2][0])**2)*2)\n",
     "    print(w, h)\n",
+    "# 스티커 이미지를 불러와서 사이즈와 색상을 변경합니다.\n",
     "sticker_path = './data/img/cat_nose.png'\n",
     "img_sticker = cv2.imread(sticker_path)\n",
     "img_sticker = cv2.resize(img_sticker, (w, h))\n",
     "img_sticker = cv2.cvtColor(img_sticker, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "# 스티커 이미지 회전\n",
-    "height, width, channel = img_sticker.shape\n",
-    "ang = math.atan(h/w)/math.pi*180\n",
-    "print(ang)\n",
-    "matrix = cv2.getRotationMatrix2D((width/2, height/2), -ang, 1)\n",
-    "img_sticker = cv2.warpAffine(img_sticker, matrix, (width, height))\n",
+    "# 스티커의 x좌표와, y좌표를 설정합니다. \n",
+    "sticker_x = img_sticker.shape[0]\n",
+    "sticker_y = img_sticker.shape[1]\n",
     "\n",
+    "# 전체 이미지에서 스티커가 시작할 좌표를 설정합니다. \n",
     "refined_x = x-w//2\n",
     "refined_y = y-h//2\n",
     "\n",
-    "x_shape = img_sticker.shape[0]\n",
-    "y_shape = img_sticker.shape[1]\n",
+    "# 스티커가 들어갈 영역입니다. \n",
+    "sticker_area = img_bgr[refined_y:refined_y+sticker_x, refined_x:refined_x+sticker_y]\n",
     "\n",
-    "sticker_area = img_bgr[refined_y:refined_y+x_shape, refined_x:refined_x+y_shape]\n",
-    "img_bgr[refined_y:refined_y+x_shape, refined_x:refined_x+y_shape] = \\\n",
+    "# 이미지에서 얼굴의 회전 각도를 구합니다. \n",
+    "height, width, channel = img_sticker.shape\n",
+    "ang = math.atan(h/w)/math.pi*180\n",
+    "print(\"이미지가 기울어진 각도:\", -round(ang,2))\n",
+    "\n",
+    "# 각도에 맞춰 스티커를 회전시킵니다.\n",
+    "# 시계 방향으로 기울어져 있기 때문에 -를 붙입니다. \n",
+    "matrix = cv2.getRotationMatrix2D((width/2, height/2), -ang, 1)\n",
+    "img_sticker = cv2.warpAffine(img_sticker, matrix, (width, height))\n",
+    "\n",
+    "img_bgr[refined_y:refined_y+sticker_x, refined_x:refined_x+sticker_y] = \\\n",
     "    np.where(img_sticker==255, sticker_area, img_sticker).astype(np.uint8)\n",
+    "\n",
     "plt.imshow(cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB))\n",
     "plt.show()"
    ]
