--- a/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
+++ b/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
@@ -315,13 +315,7 @@
       "1010/1010 [==============================] - 14s 13ms/step - loss: 0.0635 - categorical_accuracy: 0.9775 - val_loss: 2.7087 - val_categorical_accuracy: 0.5770 - lr: 2.6214e-04\n",
       "Epoch 43/100\n",
       "1010/1010 [==============================] - 14s 14ms/step - loss: 0.0449 - categorical_accuracy: 0.9846 - val_loss: 2.8392 - val_categorical_accuracy: 0.5790 - lr: 2.0972e-04\n",
-      "Epoch 44/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 44/100\n",
       "1010/1010 [==============================] - 14s 14ms/step - loss: 0.0395 - categorical_accuracy: 0.9870 - val_loss: 2.9295 - val_categorical_accuracy: 0.5782 - lr: 2.0972e-04\n",
       "Epoch 45/100\n",
       "1010/1010 [==============================] - 14s 14ms/step - loss: 0.0452 - categorical_accuracy: 0.9838 - val_loss: 2.9712 - val_categorical_accuracy: 0.5804 - lr: 2.0972e-04\n",
