--- a/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
+++ b/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:56:48.863031Z",
-     "start_time": "2020-09-16T08:56:21.257153Z"
+     "end_time": "2020-09-18T09:08:32.745084Z",
+     "start_time": "2020-09-18T09:08:06.284803Z"
     },
     "scrolled": true
    },
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35887/35887 [00:27<00:00, 1327.49it/s]"
+      "100%|██████████| 35887/35887 [00:25<00:00, 1385.76it/s]"
      ]
     },
     {
@@ -71,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T09:00:21.971717Z",
-     "start_time": "2020-09-16T09:00:21.966466Z"
+     "end_time": "2020-09-18T09:08:53.108728Z",
+     "start_time": "2020-09-18T09:08:06.757Z"
     }
    },
    "outputs": [],
@@ -486,6 +486,59 @@
     "model_path = os.getenv('HOME')+'/repo/tfjs_mobile/model.h5'\n",
     "model.save(model_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 마무리"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 현재 버전의 모바일 웹앱의 문제점"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 얼굴 영역이 아닌 사진 중 임의로 설정한 부분을 검출한다.  \n",
+    "    - 사진에서 얼굴이 중앙이 아닌 측면에 있을 때 얼굴이 아닌 배경을 대상으로 Detect한다.\n",
+    "    - 학습 데이터는 얼굴 위주의 사진으로 학습했지만, 얼굴 이외의 배경이 들어가면 성능이 떨어진다.\n",
+    "2. 웹앱이 디자인이 사용자 친화적이지 않다.  \n",
+    "    - 감정의 LABELS가 한정적이다.  \n",
+    "    - UI가 친절하지 못하다.\n",
+    "3. 정확도가 50% 보다 낮다.  \n",
+    "    - 확률이 반도 안돼서 신빙성이 없어보인다.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 개선을 위한 해결 방안"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 얼굴 영역을 인식해주는 `face_recognition` 모듈을 사용해서, 얼굴영역을 잘라준다.  \n",
+    "\n",
+    "2. 노드에서 언급된 `google-facial-expression`의 정제된 감정 데이터를 사용한다.\n",
+    "\n",
+    "3. 사용하는 모델을 바꿔본다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
