--- a/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
+++ b/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
@@ -527,18 +527,16 @@
    "metadata": {},
    "source": [
     "1. 얼굴 영역을 인식해주는 `face_recognition` 모듈을 사용해서, 얼굴영역을 잘라준다.  \n",
+    "<br> \n",
     "\n",
     "2. 노드에서 언급된 `google-facial-expression`의 정제된 감정 데이터를 사용한다.\n",
+    "<br>\n",
     "\n",
-    "3. 사용하는 모델을 바꿔본다."
+    "3. 감정 분석에 사용하는 모델을 바꿔본다.\n",
+    "<br>\n",
+    "\n",
+    "4. 데이터 전처리에 더 신경을 쓰고, 추가로 noise 섞인 이미지를 generate한다. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
