--- a/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
+++ b/Project/Exploration/E13. Face2Emoji 모바일 웹앱 만들기.ipynb
@@ -537,6 +537,20 @@
     "\n",
     "4. 데이터 전처리에 더 신경을 쓰고, 추가로 noise 섞인 이미지를 generate한다. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 웹앱 url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://pebpung.github.io/tfjs_mobile/"
+   ]
   }
  ],
  "metadata": {
