--- a/Project/Exploration/E11. 작사가 인공지능 만들기.ipynb
+++ b/Project/Exploration/E11. 작사가 인공지능 만들기.ipynb
@@ -31,13 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-09-15T08:16:13.675Z"
+     "end_time": "2020-09-22T07:42:58.916074Z",
+     "start_time": "2020-09-22T07:42:58.885316Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 크기: 187088\n",
+      "Examples:\n",
+      " ['The Cat in the Hat', 'By Dr. Seuss', 'The sun did not shine.']\n"
+     ]
+    }
+   ],
    "source": [
     "import re    \n",
     "import glob\n",
@@ -70,14 +81,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-09-15T08:16:15.548Z"
+     "end_time": "2020-09-22T07:42:59.850996Z",
+     "start_time": "2020-09-22T07:42:59.844472Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Cat in the Hat\n",
+      "By Dr. Seuss\n",
+      "The sun did not shine.\n",
+      "It was too wet to play.\n",
+      "So we sat in the house\n",
+      "All that cold cold wet day.\n",
+      "I sat there with Sally.\n",
+      "We sat there we two.\n",
+      "And I said How I wish\n",
+      "We had something to do!\n",
+      "Too wet to go out\n",
+      "And too cold to play ball.\n",
+      "So we sat in the house.\n",
+      "We did nothing at all.\n",
+      "So all we could do was to\n",
+      "Sit!\n"
+     ]
+    }
+   ],
    "source": [
     "for idx, sentence in enumerate(raw_corpus):\n",
     "    if len(sentence) == 0: continue   # 길이가 0인 문장은 건너뜁니다.\n",
@@ -122,17 +157,22 @@
    ],
    "source": [
     "def preprocess_sentence(sentence):\n",
-    "    sentence = sentence.lower().strip()    \n",
-    "    sentence = re.sub(r\"([?.!,¿])\", r\" \\1 \", sentence)        # 패턴의 특수문자를 만나면 특수문자 양쪽에 공백을 추가\n",
-    "    sentence = re.sub(r'[\" \"]+', \" \", sentence)                  # 공백 패턴을 만나면 스페이스 1개로 치환\n",
-    "    sentence = re.sub(r\"[^a-zA-Z?.!,¿]+\", \" \", sentence)  # a-zA-Z?.!,¿ 패턴을 제외한 모든 문자(공백문자까지도)를 스페이스 1개로 치환\n",
+    "    sentence = sentence.lower().strip()   \n",
+    "    # 패턴의 특수문자를 만나면 특수문자 양쪽에 공백을 추가\n",
+    "    sentence = re.sub(r\"([?.!,¿])\", r\" \\1 \", sentence) \n",
+    "     # 공백 패턴을 만나면 스페이스 1개로 치환\n",
+    "    sentence = re.sub(r'[\" \"]+', \" \", sentence) \n",
+    "     # a-zA-Z?.!,¿ 패턴을 제외한 모든 문자(공백문자까지도)를 스페이스 1개로 치환\n",
+    "    sentence = re.sub(r\"[^a-zA-Z?.!,¿]+\", \" \", sentence) \n",
     "\n",
     "    sentence = sentence.strip()\n",
-    "    sentence = '<start> ' + sentence + ' <end>'      # 이전 스텝에서 본 것처럼 문장 앞뒤로 <start>와 <end>를 단어처럼 붙여 줍니다\n",
+    "    # 이전 스텝에서 본 것처럼 문장 앞뒤로 <start>와 <end>를 단어처럼 붙여 줍니다\n",
+    "    sentence = '<start> ' + sentence + ' <end>'      \n",
     "    \n",
     "    return sentence\n",
     "\n",
-    "print(preprocess_sentence(\"This @_is ;;;sample        sentence.\"))   # 이 문장이 어떻게 필터링되는지 확인해 보세요."
+    "# 이 문장이 어떻게 필터링되는지 확인해 보세요.\n",
+    "print(preprocess_sentence(\"This @_is ;;;sample        sentence.\"))   "
    ]
   },
   {
