--- a/Project/Exploration/E20.Anomaly_Detection.ipynb
+++ b/Project/Exploration/E20.Anomaly_Detection.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:25:25.377176Z",
-     "start_time": "2020-10-20T05:25:24.620428Z"
+     "end_time": "2020-10-21T14:05:27.528109Z",
+     "start_time": "2020-10-21T14:05:26.812481Z"
     }
    },
    "outputs": [],
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:25:39.850291Z",
-     "start_time": "2020-10-20T05:25:39.836368Z"
+     "end_time": "2020-10-21T14:05:27.703501Z",
+     "start_time": "2020-10-21T14:05:27.534368Z"
     }
    },
    "outputs": [
@@ -133,7 +133,7 @@
        "4  2000-09-22  3673.0  3780.0  3615.0  3776.0     3776.0  55926.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:28:25.948388Z",
-     "start_time": "2020-10-20T05:28:25.941052Z"
+     "end_time": "2020-10-21T14:05:27.723365Z",
+     "start_time": "2020-10-21T14:05:27.717830Z"
     }
    },
    "outputs": [
@@ -167,7 +167,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:29:09.066817Z",
-     "start_time": "2020-10-20T05:29:09.059599Z"
+     "end_time": "2020-10-21T14:05:27.747600Z",
+     "start_time": "2020-10-21T14:05:27.740031Z"
     }
    },
    "outputs": [
@@ -218,7 +218,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:50:22.725418Z",
-     "start_time": "2020-10-20T05:50:22.575479Z"
+     "end_time": "2020-10-21T14:05:28.079284Z",
+     "start_time": "2020-10-21T14:05:27.761364Z"
     }
    },
    "outputs": [
@@ -283,11 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:55:18.881009Z",
-     "start_time": "2020-10-20T05:55:18.738828Z"
+     "end_time": "2020-10-21T14:05:28.243229Z",
+     "start_time": "2020-10-21T14:05:28.107265Z"
     }
    },
    "outputs": [
@@ -339,11 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:57:40.495987Z",
-     "start_time": "2020-10-20T05:57:40.361731Z"
+     "end_time": "2020-10-21T14:05:28.962028Z",
+     "start_time": "2020-10-21T14:05:28.741879Z"
     }
    },
    "outputs": [],
@@ -356,11 +356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:57:41.596590Z",
-     "start_time": "2020-10-20T05:57:41.415905Z"
+     "end_time": "2020-10-21T14:05:29.201351Z",
+     "start_time": "2020-10-21T14:05:29.010997Z"
     }
    },
    "outputs": [
@@ -391,11 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T05:59:02.717371Z",
-     "start_time": "2020-10-20T05:59:02.709643Z"
+     "end_time": "2020-10-21T14:05:29.899849Z",
+     "start_time": "2020-10-21T14:05:29.873190Z"
     }
    },
    "outputs": [
@@ -429,11 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T06:00:24.961079Z",
-     "start_time": "2020-10-20T06:00:24.956599Z"
+     "end_time": "2020-10-21T14:05:30.689390Z",
+     "start_time": "2020-10-21T14:05:30.644382Z"
     }
    },
    "outputs": [],
@@ -445,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T06:01:13.418254Z",
-     "start_time": "2020-10-20T06:01:12.382333Z"
+     "end_time": "2020-10-21T14:05:31.803551Z",
+     "start_time": "2020-10-21T14:05:31.226262Z"
     }
    },
    "outputs": [
@@ -483,16 +483,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이렇게 Time series decompose를 하는 이유는 Trend와 Seasonal을 뽑아내고 남은 resid가 큰날은 뭔가 일반적인 흐름에서 벗어난 날로 해석될 수 있기 때문이다. "
+    "이렇게 Time series decompose를 하는 이유는 Trend와 Seasonal을 뽑아내고 남은 resid가 큰날은 뭔가 일반적인 흐름에서 벗어난 날로 해석될 수 있기 때문입니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T06:01:36.686065Z",
-     "start_time": "2020-10-20T06:01:36.506321Z"
+     "end_time": "2020-10-21T14:05:40.068697Z",
+     "start_time": "2020-10-21T14:05:39.868307Z"
     }
    },
    "outputs": [
@@ -516,11 +516,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T06:13:20.632883Z",
-     "start_time": "2020-10-20T06:13:20.629755Z"
+     "end_time": "2020-10-21T14:05:40.202715Z",
+     "start_time": "2020-10-21T14:05:40.200113Z"
     }
    },
    "outputs": [
@@ -557,8 +557,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T06:15:47.033146Z",
-     "start_time": "2020-10-20T06:15:47.027851Z"
+     "end_time": "2020-10-21T14:05:58.538175Z",
+     "start_time": "2020-10-21T14:05:58.530985Z"
     }
    },
    "outputs": [
@@ -567,7 +567,7 @@
      "output_type": "stream",
      "text": [
       "평균: -1.3857940518773666 표준편차: 110.60068205120827\n",
-      "이상치 갯수: 93\n"
+      "이상치 갯수: 36\n"
      ]
     }
    ],
@@ -576,52 +576,86 @@
     "mu, std = result.resid.mean(), result.resid.std()\n",
     "print(\"평균:\", mu, \"표준편차:\", std)\n",
     "\n",
-    "# 3-sigma(표준편차)를 기준으로 이상치 판단\n",
-    "print(\"이상치 갯수:\", len(result.resid[(result.resid>mu+3*std)|(result.resid<mu-3*std)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-20T06:34:54.094679Z",
-     "start_time": "2020-10-20T06:34:54.088528Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66     2000-12-20\n",
-       "73     2001-01-02\n",
-       "91     2001-01-29\n",
-       "92     2001-01-30\n",
-       "136    2001-04-03\n",
-       "          ...    \n",
-       "5083   2020-10-05\n",
-       "5084   2020-10-06\n",
-       "5085   2020-10-07\n",
-       "5086   2020-10-08\n",
-       "5093   2020-10-19\n",
-       "Name: Date, Length: 93, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.Date[result.resid[\n",
-    "    (result.resid>mu+3*std)|(result.resid<mu-3*std)].index]"
+    "# 5-sigma(표준편차)를 기준으로 이상치 판단\n",
+    "print(\"이상치 갯수:\", len(result.resid[(result.resid>mu+5*std)|(result.resid<mu-5*std)]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5094개의 데이터 샘플 중에서 93개는 이상치라는 사실을 확인했습니다. 그럼 탐지해낸 Anomalies는 Outlier인지, Novelties인지 구분해야 합니다. 하지만 대충 코로나나 대공황 때문이라고 예측할 수 있지만, 확실하게 주장할 수는 없습니다."
+    "적절한 이상치의 개수를 조절하기 위해 5-sigma를 기준으로 판단하였습니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-21T14:06:12.493341Z",
+     "start_time": "2020-10-21T14:06:12.486764Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4699   2019-06-03\n",
+       "4892   2020-02-12\n",
+       "4893   2020-02-13\n",
+       "4894   2020-02-14\n",
+       "4895   2020-02-16\n",
+       "4896   2020-02-18\n",
+       "4897   2020-02-19\n",
+       "4898   2020-02-20\n",
+       "4899   2020-02-21\n",
+       "4900   2020-02-23\n",
+       "4916   2020-03-12\n",
+       "4918   2020-03-15\n",
+       "4919   2020-03-16\n",
+       "4920   2020-03-17\n",
+       "4921   2020-03-18\n",
+       "4922   2020-03-19\n",
+       "4923   2020-03-20\n",
+       "4924   2020-03-22\n",
+       "4925   2020-03-23\n",
+       "4927   2020-03-25\n",
+       "4930   2020-03-29\n",
+       "4933   2020-04-01\n",
+       "4935   2020-04-03\n",
+       "5055   2020-08-26\n",
+       "5056   2020-08-27\n",
+       "5057   2020-08-28\n",
+       "5058   2020-08-30\n",
+       "5059   2020-08-31\n",
+       "5060   2020-09-01\n",
+       "5061   2020-09-02\n",
+       "5073   2020-09-21\n",
+       "5075   2020-09-23\n",
+       "5076   2020-09-24\n",
+       "5077   2020-09-25\n",
+       "5082   2020-10-02\n",
+       "5084   2020-10-06\n",
+       "Name: Date, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Date[result.resid[\n",
+    "    (result.resid>mu+5*std)|(result.resid<mu-5*std)].index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5094개의 데이터 샘플 중에서 36개는 이상치라는 사실을 확인했습니다. 그럼 탐지해낸 Anomalies는 Outlier인지, Novelties인지 구분해야 합니다. 4699번의 데이터를 제외하고 2020년에 이상치가 몰려있습니다. 날짜를 확인해보니 2-3월 코로나로 인해 주식시장이 급격하게 하락한날로 보입니다. 하지만 이러한 날은 Outlier라고 볼 수 없습니다. 어떠한 오류로 인해 손상된 데이터가 아닌 실제 존재하는 데이터이기 때문입니다.  \n",
+    "유의미한 데이터라고 생각하기 때문에 제거하지않고 그대로 둡니다. "
    ]
   },
   {
@@ -2109,7 +2143,8 @@
    "metadata": {},
    "source": [
     "인베스팅 닷컴으로 확인해본 결과 코로나의 영향으로 나스닥은 2020년 3월 23일 최대 낙폭을 기록합니다. 또한 9월에 다시 조정기가 와서 하락하는 추세를 보이고 있습니다. 이러한 하락세를 보이는 데이터는 그룹4에 포함되어 있습니다.  \n",
-    "반면 그룹5는 코로나 이후 혹은 이전에 큰 상승세를 기록하던 데이터의 집합입니다."
+    "반면 그룹5는 코로나 이후 혹은 이전에 큰 상승세를 기록하던 데이터의 집합입니다.  \n",
+    "마찬가지로 그대로 내버려 두겠습니다. "
    ]
   },
   {
@@ -2138,33 +2173,6 @@
     "predict.columns=['predict']\n",
     "\n",
     "r = pd.concat([columns,predict],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-20T08:51:31.321445Z",
-     "start_time": "2020-10-20T08:51:26.027282Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sns' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-75b98c9cef9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'predict'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sns' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "sns.pairplot(r,hue='predict')\n",
-    "plt.show()"
    ]
   },
   {
@@ -3373,8 +3381,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "앞선 두가지 방법은 Unsupervised Clustering을 활용하여 군집을 형성하고 소수의 집합을 이상치로 가정하는 방법이었습니다. 적은 샘플로도 이상치를 분리할 수 있다는 장점이 있지만, 데이터의 안정성을 위해서 Time series decomposition 분석이 추가되는 단점이 있습니다.  \n",
-    "오터인코더 모델에서는 decomposition을 하지 않고도 간단한 데이터 전처리만을 수행하면 되는 장점이 있습니다. 그리고 모델을 변형시켜서 좀 더 나은 성능을 낼 수도 있습니다. "
+    "이번 실습에서는 기본 통계분석으로 이상치 찾기, Unsupervised Clustering 방식으로 이상치 찾기, Auto-Encoder를 활용해 이상치 찾기로 총 3가지 방법을 활용해봤습니다. \n",
+    "- 기본 통계분석으로 이상치 찾기는 Time series decompose를 하여 resid 성분을 뽑아내서 분석하는 방법입니다. resid 성분은 정규분포의 형태를 띄고 있습니다. 이 분포에서 일정 이상 벗어나는 데이터를 이상치로 구분하기 때문에 직관적으로 이해가 잘 되는 것 같습니다. \n",
+    "- Unsupervised Clustering은 군집을 형성하고 소수의 집합을 이상치로 가정하는 방법이었습니다. 이 방식 또한 Time series decomposition 분석이 추가되는 단점이 있습니다. 하지만 적은 샘플로도 이상치를 분리할 수 있다는 장점이 있습니다. \n",
+    "- Auto-Encoder 모델은 딥러닝 모델을 활용하여 특징을 검출하고 이상치를 찾는 방법입니다. 딥러닝을 활용한 방식이기 때문에 기존의 decomposition을 거치지 않아도 되는 장점이 있습니다. 또한 다양한 모델을 사용하거나 변형시켜서 더 나은 성능을 낼 수 있습니다. "
    ]
   },
   {
