--- a/Project/Exploration/E24_Conditional-Generative-Model.ipynb
+++ b/Project/Exploration/E24_Conditional-Generative-Model.ipynb
@@ -162,6 +162,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data augmentation에서는 총 2가지의 기법을 사용해서 비교를 할 예정입니다.  \n",
+    "1. tensorflow.image 를 활용한 augmentation\n",
+    "2. cutmix를 활용한 augmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tensoflow.image 활용"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {},
@@ -200,7 +223,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "segment 이미지와 sity 이미지에 같은 augmentation 적용하겠습니다. \n",
+    "먼저 tensorflow.image를 활용하여 augmentation을 적용하겠습니다.  \n",
+    "segment 이미지와 sity 이미지에 같은 모양을 만들기 위해 concat을 한 이미지를 처리하고 return 시에 분리하겠습니다.\n",
     "\n",
     "1. reflect 혹은 constant 패드 추가\n",
     "2. 대상 크기를 랜덤으로 자르기\n",
@@ -241,6 +265,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "제대로 augmentation이 적용된 모습을 확인 할 수 있습니다.  \n",
+    "padd가 CONSTANT라면 흰색으로 보이는 부분으로 채워지고, padd가 REFLECT라면 반전된 성분이 붙여집니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cutmix 활용"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 117,
    "metadata": {},
@@ -248,6 +287,9 @@
    "source": [
     "@tf.function() \n",
     "def cutmix(segment, city, batch_size=2, img_size=256):\n",
+    "    ''' 입력: segment, city 이미지 리스트,\n",
+    "        파라미터: batch_size, img_size,\n",
+    "        서로 다른 두개의 이미지 리스트를 받아서 cutmix해준다.'''\n",
     "    mixed_citys = []\n",
     "    mixed_aurgs = []\n",
     "    image = tf.concat([segment, city], axis=-1)\n",
@@ -266,8 +308,8 @@
     "    mixed_aurg = tf.reshape(tf.stack(mixed_aurgs),(batch_size, img_size, img_size, 3))                      \n",
     "    return mixed_city, mixed_aurg\n",
     "\n",
-    "\n",
     "def mix_2_images(image_a, image_b, xa, ya, xb, yb, img_size=256):\n",
+    "    '''서로 다른 두 이미지 a, b가 있다면 a의 이미지에 crop된 b이미지를 붙여준다.'''\n",
     "    one = image_a[ya:yb,0:xa,:]\n",
     "    two = image_b[ya:yb,xa:xb,:]\n",
     "    three = image_a[ya:yb,xb:img_size,:]\n",
@@ -279,7 +321,7 @@
     "    return mixed_img\n",
     "\n",
     "def get_clip_box(image_a, image_b, img_size=256):\n",
-    "    # 박스의 위치를 이동시킴\n",
+    "    '''랜덤으로 박스의 위치 좌표를 출력한다.'''\n",
     "    x = tf.cast( tf.random.uniform([],30, img_size-30),tf.int32)\n",
     "    y = tf.cast( tf.random.uniform([],30, img_size-30),tf.int32)\n",
     "    \n",
@@ -294,6 +336,17 @@
     "    xb = tf.math.minimum(img_size, x+width//2)\n",
     "    \n",
     "    return xa, ya, xb, yb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그 다음 cutmix를 활용하기 위해 함수를 정의 했습니다.  \n",
+    "함수는 다음과 같이 진행됩니다.  \n",
+    "1. segment 이미지와 city 이미지 concat\n",
+    "2. 이미지 내에서 임의의 박스 좌표 추출\n",
+    "3. 서로 다른 두 concat된 이미지를 crop하여 합쳐준다."
    ]
   },
   {
@@ -333,6 +386,13 @@
     "    plt.subplot(3,4,i+1); \n",
     "    plt.imshow(denormalize(augmented_city[1])); plt.title(f\"Image {img_n}\")\n",
     "    img_n += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "image 1, 2, 4 를 보면 잘 적용되었음을 볼 수 있습니다."
    ]
   },
   {
@@ -427,7 +487,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## pix2pix cGAN Generator 구성하기"
+    "우리가 train할 데이터에도 augmentation이 잘 적용되었습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 생성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pix2pix cGAN Generator 구성하기"
    ]
   },
   {
@@ -520,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decoder 만들기"
+    "### Decoder 만들기"
    ]
   },
   {
@@ -615,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  U-Net Generator"
+    "### U-Net Generator"
    ]
   },
   {
@@ -749,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discriminator 구현하기"
+    "### Discriminator 구현하기"
    ]
   },
   {
