--- a/Project/Exploration/E30.Music_Transformer.ipynb
+++ b/Project/Exploration/E30.Music_Transformer.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Music Transformer 모델에 구현하고, 이를 이용해 실제로 음악을 생성하는 실습을 진행해볼 예정입니다.  \n",
+    "그리고 다양한 조건으로 MIDI 파일을 생성해 볼 것입니다.  \n",
+    "프로젝트는 다음과 같은 순서로 진행됩니다. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "w3KYF12JqakK"
    },
@@ -2606,17 +2615,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "개인적으로 잘 생성되었던 음악은 실험 2번의 파일입니다.  \n",
-    "아래 링크로 가면 확인할 수 있습니다.  \n",
-    "[midi 첨부파일 링크](../data/mid/)"
+    "### 실험 결과"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "개인적으로 잘 생성되었던 음악은 실험 2번의 파일입니다.  \n",
+    "아래 링크로 가면 확인할 수 있습니다.  \n",
+    "<br>\n",
+    "[midi 첨부파일 링크](data/mid/)"
+   ]
   }
  ],
  "metadata": {
