--- a/Project/Exploration/E6. ADF test stationarity.ipynb
+++ b/Project/Exploration/E6. ADF test stationarity.ipynb
@@ -705,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](../../data/img/E6/p1.png)"
+    "![image.png](./data/img/E6/p1.png)"
    ]
   },
   {
@@ -729,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](../../data/img/E6/p2.png)"
+    "![image.png](./data/img/E6/p2.png)"
    ]
   },
   {
@@ -753,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](../../data/img/E6/p3.png)"
+    "![image.png](./data/img/E6/p3.png)"
    ]
   },
   {
@@ -783,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
